--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,9 +6,16 @@
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Black+Ops+One&family=Graduate&family=Josefin+Sans&family=Kumbh+Sans:wght@400;900&family=Nunito&family=Ubuntu&display=swap"
+      rel="stylesheet"
+    />
     <title>Screen Time</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="font-family: Josefin Sans;"></div>
   </body>
 </html>
